--- a/H753z.ioc
+++ b/H753z.ioc
@@ -5,6 +5,7 @@ CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -16,16 +17,19 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=RTC
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32H753ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin1=PH0-OSC_IN (PH0)
 Mcu.Pin2=PH1-OSC_OUT (PH1)
-Mcu.Pin3=VP_RTC_VS_RTC_Activate
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=6
+Mcu.Pin3=PD8
+Mcu.Pin4=PD9
+Mcu.Pin5=VP_RTC_VS_RTC_Activate
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753ZITx
@@ -44,6 +48,16 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Clock-Source
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
+PD8.GPIOParameters=GPIO_PuPd
+PD8.GPIO_PuPd=GPIO_PULLUP
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.GPIOParameters=GPIO_PuPd
+PD9.GPIO_PuPd=GPIO_PULLUP
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -80,7 +94,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -160,6 +174,8 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=16000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
